# k8s-operator

./: ARCHITECTURE.md  Cargo.toml  README.md  TESTING.md  USER_MANUAL.md
crates/k8s-operator-controller/: Cargo.toml
crates/k8s-operator-controller/src/: events.rs  finalizer.rs  leader.rs  lib.rs  status.rs
crates/k8s-operator-core/: Cargo.toml
crates/k8s-operator-core/src/: types.rs
crates/k8s-operator-derive/: Cargo.toml
crates/k8s-operator-raft/: Cargo.toml
crates/k8s-operator-raft/src/: config.rs  discovery.rs  lib.rs
crates/k8s-operator-storage/: Cargo.toml
crates/k8s-operator-storage/src/: lib.rs  types.rs
src/: context.rs  error.rs  lib.rs  operator.rs
src/raft/: cert_reload.rs  cluster.rs  compaction.rs  config.rs  discovery.rs  health.rs  mod.rs  node.rs  shutdown.rs  types.rs
src/raft/network/: client.rs  factory.rs  mod.rs  server.rs
src/raft/storage/: combined_storage.rs  mod.rs  rocksdb_storage.rs
src/types/: container.rs  core.rs  metadata.rs  mod.rs  networking.rs  rbac.rs  volume.rs  workloads.rs
tests/: ha_cluster.rs  rocksdb_storage.rs
