[package]
name = "k8s-operator"
version = "0.3.0"
edition = "2021"
description = "A batteries-included Kubernetes operator framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexchoi0/k8s-operator"
keywords = ["kubernetes", "operator", "k8s", "controller"]
categories = ["development-tools", "asynchronous"]

[dependencies]
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["latest"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
