[package]
name = "k8s-operator"
version = "0.3.0"
edition = "2021"
description = "A batteries-included Kubernetes operator framework with optional HA support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexchoi0/k8s-operator"
keywords = ["kubernetes", "operator", "k8s", "controller", "ha"]
categories = ["development-tools", "asynchronous"]

[features]
default = []
ha = ["openraft", "openraft-memstore", "parking_lot", "tonic", "prost", "tokio-stream"]
ha-persist = ["ha", "rocksdb"]

[dependencies]
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["latest"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# HA/Raft dependencies (optional)
openraft = { version = "0.9", features = ["serde"], optional = true }
openraft-memstore = { version = "0.9", optional = true }
parking_lot = { version = "0.12", optional = true }
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
tokio-stream = { version = "0.1", optional = true }
rocksdb = { version = "0.22", optional = true }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
