[package]
name = "k8s-operator-controller"
version = "0.1.0"
edition = "2021"
description = "Kubernetes controller runtime for k8s-operator framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexchoi0/k8s-operator"
keywords = ["kubernetes", "operator", "controller", "reconciler"]
categories = ["development-tools"]

[dependencies]
k8s-operator-core = { path = "../k8s-operator-core", version = "0.1.0" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
chrono = "0.4"
