[package]
name = "k8s-operator-core"
version = "0.1.1"
edition = "2021"
description = "Core traits and types for k8s-operator framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexchoi0/k8s-operator"
keywords = ["kubernetes", "operator", "raft"]
categories = ["development-tools"]

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
futures = { workspace = true }
schemars = { workspace = true }
